grammars/tree-sitter-java-frameworks/test/corpus/java_frameworks_smoke.txt
========================================
Java frameworks smoke baseline
========================================

package demo;

import java.util.List;

public class Example {
  private final List<String> values;

  public Example(List<String> values) {
    this.values = values;
  }

  public List<String> values() {
    return values;
  }
}

---

(program
  (package_declaration
    (identifier))
  (import_declaration
    (scoped_identifier
      (scoped_identifier
        (identifier)
        (identifier))
      (identifier)))
  (class_declaration
    (modifiers)
    (identifier)
    (class_body
      (field_declaration
        (modifiers)
        (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier)))
        (variable_declarator
          (identifier)))
      (constructor_declaration
        (modifiers)
        (identifier)
        (formal_parameters
          (formal_parameter
            (generic_type
              (type_identifier)
              (type_arguments
                (type_identifier)))
            (identifier)))
        (constructor_body
          (expression_statement
            (assignment_expression
              (field_access
                (this)
                (identifier))
              (identifier)))))
      (method_declaration
        (modifiers)
        (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier)))
        (identifier)
        (formal_parameters)
        (block
          (return_statement
            (identifier)))))))
